@@ -11,6 +11,10 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-06-28
+2016-9-30 David Schneider
+- update to pdsdata 8.6.16 and psddldata V01-00-48 for BldDataBeamMonitorV1 and BldUsdUsbV1
+
 Tag: V00-06-27
 2016-6-13 David Schneider
 - update to pdsdata 8.6.12 for Partition::ConfigV2 JIRA PSAS-241
